--- a/FitnessClubKiselev/App.xaml
+++ b/FitnessClubKiselev/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:FitnessClubKiselev"
-             StartupUri="Windows/ServiceList.xaml">
+             StartupUri="Windows/ClientList.xaml">
     <Application.Resources>
          
     </Application.Resources>
