--- a/FitnessClubKiselev/Windows/CartWindow.xaml
+++ b/FitnessClubKiselev/Windows/CartWindow.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="FitnessClubKiselev.Windows.ServiceList"
+﻿<Window x:Class="FitnessClubKiselev.Windows.CartWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:FitnessClubKiselev.Windows"
         mc:Ignorable="d"
-        Title="ServiceList" Height="800" Width="800">
+        Title="CartWindow" Height="800" Width="800">
     <Grid>
         <Grid.Background>
             <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
@@ -22,54 +22,12 @@
         </Grid.RowDefinitions>
 
 
-        <TextBlock Text="Список услуг"
+        <TextBlock Text="Корзина"
                    FontSize="30"
                    FontWeight="Bold"
                    HorizontalAlignment="Center"/>
-        <WrapPanel Grid.Row="1"
-                   VerticalAlignment="Center">
-            <TextBlock Text="Поиск:"
-                   FontSize="20"                   
-                   Margin="16 0 0 0"/>
 
-            <TextBox x:Name="TbSearch"
-                     FontSize="18"                   
-                     Margin="5 0 0 0"
-                     Width="200"
-                     Height="30"
-                     Background="#FFBCFFFF" 
-                     BorderBrush="{x:Null}"
-                     Foreground="#FF0D3F44"
-                     TextChanged="TbSearch_TextChanged"
-                     />
-            <TextBlock Text="Критерий:"
-                   FontSize="20"                   
-                   Margin="30 0 0 0"/>
-            <ComboBox x:Name="CMBTypeSearch"
-                      HorizontalAlignment="Left"
-                      FontSize="16"
-                      Margin="5 0 0 0"
-                      Height="30"
-                      Width="200" 
-                      Background="#FFBCFFFF" 
-                      BorderBrush="{x:Null}"
-                      Foreground="#FF0D3F44"
-                      DisplayMemberPath="" SelectionChanged="CMBTypeSearch_SelectionChanged">
-            </ComboBox>
-            <Button x:Name="BtnCart"
-                    FontSize="18"
-                    Width="40"
-                    Height="40"
-                    Margin="130 0 0 0"
-                    Background="{x:Null}"
-                    BorderThickness="0"
-                    Foreground="#FF0D3F44"
-                    Click="BtnCart_Click">
-                <Image Source="/Res/cart.png"/>
-            </Button>
-        </WrapPanel>
-
-        <ListView x:Name="lvService"
+        <ListView x:Name="lvServiceCart"
                   Grid.Row="2"
                   Margin="5" 
                   d:ItemsSource="{d:SampleData ItemCount=5}"
@@ -115,39 +73,25 @@
                             <TextBlock Text="{Binding Description}"
                                        FontSize="18"
                                        Margin="5 0 0 0"/>
-                            <WrapPanel HorizontalAlignment="Center"
-                                       Margin="0 10 0 0">
-                                <Button x:Name="BtnEditProduct"
+                            <Button x:Name="BtnDeleteCart"
                                     FontSize="18"
                                     Width="40"
                                     Height="40"
-                                    Margin="0 0 50 0"
+                                    Margin="140 0 0 0"
                                     Background="{x:Null}"
                                     BorderThickness="0"
                                     Foreground="#FF0D3F44"
-                                    Click="BtnEditProduct_Click">
-                                    <Image Source="/Res/change.png"/>
-                                </Button>
-                                <Button x:Name="BtnCartAdd"
-                                    FontSize="18"
-                                    Width="40"
-                                    Height="40"
-                                    Margin="50 0 0 0"
-                                    Background="{x:Null}"
-                                    BorderThickness="0"
-                                    Foreground="#FF0D3F44"
-                                    Click="BtnCartAdd_Click">
-                                    <Image Source="/Res/cart.png"/>
-                                </Button>
-                            </WrapPanel>
+                                    Click="BtnDeleteCart_Click">
+                                <Image Source="/Res/delete.png"/>
+                            </Button>
                         </StackPanel>
                     </Border>
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>
 
-        <Button x:Name="BtnAddService"
-                Content="Добавить услугу"
+        <Button x:Name="BtnBuy"
+                Content="Купить"
                 Grid.Row="3"
                 Width="250"
                 Height="40"
@@ -157,6 +101,6 @@
                 Background="#FF60B9E2" 
                 BorderBrush="#FF2A6A67" 
                 Foreground="#FF0D3F44"
-                Click="BtnAddService_Click"/>
+                Click="BtnBuy_Click"/>
     </Grid>
 </Window>
