--- a/FitnessClubKiselev/Windows/CartWindow.xaml
+++ b/FitnessClubKiselev/Windows/CartWindow.xaml
@@ -111,7 +111,7 @@
             Margin="20 0 20 0"
             VerticalAlignment="Center"
             />
-        <TextBlock 
+        <TextBlock x:Name="TbSum"
              Text="0"
              FontSize="18"
              FontWeight="Bold"
